--- a/src/styles/CardStyles.module.css
+++ b/src/styles/CardStyles.module.css
@@ -4,7 +4,6 @@
     padding: 0 4px;
   }
   
-  /* Create four equal columns that sits next to each other */
   .column {
     flex: 25%;
     max-width: 25%;
@@ -17,6 +16,12 @@
     width: 100%;
   }
 
+  .listWrapper {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
   .cardWrapper {
     position: relative;
     overflow: hidden; 
@@ -24,6 +29,7 @@
     max-width: 24rem; 
     box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05); 
     margin-bottom: 1.5rem;
+    flex-grow: 1;
   }
 
   .cardImg {
@@ -44,6 +50,7 @@
   .profileWrapper {
     display: flex;
     align-items: center;
+    flex-grow: 1;
   }
   
   .profilePicture {
@@ -63,6 +70,7 @@
     padding-bottom: 1rem; 
     padding-left: 1.5rem;
     padding-right: 1.5rem; 
+    flex-grow: 1;
   }
 
   .cardBodyTitle {
@@ -76,6 +84,7 @@
     font-size: 1rem;
     line-height: 1.5rem; 
     color: #374151; 
+    flex-grow: 1;
   }
 
   .cardTagWrapper {
@@ -100,7 +109,6 @@
     color: #232324; 
   }
   
-  /* Responsive layout - makes a two column-layout instead of four columns */
   @media screen and (max-width: 800px) {
     .column {
       flex: 50%;
@@ -108,7 +116,6 @@
     }
   }
   
-  /* Responsive layout - makes the two columns stack on top of each other instead of next to each other */
   @media screen and (max-width: 600px) {
     .column {
       flex: 100%;
